[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "This is my version of the advent of code"
authors = ["Eduardo Alvarez <eduardo.alvarez@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
